// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Add 1`] = `
<button
  className="Button-pzvjfl-0 lntRdW"
>
  Hinzufügen
</button>
`;

exports[`Storyshots Components/Button Order 1`] = `
<button
  className="Button-pzvjfl-0 lntRdW"
>
  Bestellen
</button>
`;

exports[`Storyshots Components/Cards/Extra Large Product 1`] = `
<div
  className="CardExtraLarge__Container-fu46da-0 jHCDMk"
>
  <h2>
    Blaue Box
  </h2>
  <div
    className="CardExtraLarge__CardImage-fu46da-1 jMQAFB"
  >
    <img
      alt="Blaue Box"
      src="https://via.placeholder.com/240"
    />
  </div>
  <article
    className="CardExtraLarge__CardDescription-fu46da-2 dFFSoh"
  >
    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis aspernatur tenetur culpa illum molestiae officia ...
  </article>
  <article>
    <h3>
      Leistungsumfang:
    </h3>
    <ul>
      <li>
        Eine blaue Box
      </li>
      <li>
        Lieferung und Montage
      </li>
      <li>
        Entsorgung der alten grauen Box
      </li>
    </ul>
  </article>
  <aside
    className="CardExtraLarge__CardPrice-fu46da-3 grsCJX"
  >
    Preis: € 
    328.5
  </aside>
  <button
    className="Button-pzvjfl-0 lntRdW"
  >
    Hinzufügen
  </button>
</div>
`;

exports[`Storyshots Components/Cards/Large Product 1`] = `
<div
  className="CardLarge__Container-s54zhd-0 iOETZv"
>
  <h2>
    Blaue Box
  </h2>
  <div
    className="CardLarge__CardImage-s54zhd-1 brXhcv"
  >
    <img
      alt="Blaue Box"
      src="https://via.placeholder.com/150"
    />
  </div>
  <article
    className="CardLarge__CardDescription-s54zhd-2 bVsbFz"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa ...
  </article>
  <aside
    className="CardLarge__CardPrice-s54zhd-3 jjmLul"
  >
    Preis: € 
    328.5
  </aside>
</div>
`;

exports[`Storyshots Components/Cards/Medium Product 1`] = `
<div
  className="CardMedium__Container-ud6k7h-0 gPCKwI"
>
  <div
    className="CardMedium__CardImage-ud6k7h-3 ilNQcw"
  >
    <img
      alt="Blaue Box"
      src="https://via.placeholder.com/100"
    />
  </div>
  <div
    className="CardMedium__DescriptionContainer-ud6k7h-1 gcGxjk"
  >
    <h2>
      Blaue Box
    </h2>
    <div
      className="CardMedium__DetailsContainer-ud6k7h-2 fXBuwY"
    >
      <p>
        € 
        328.5
      </p>
      <p>
        x 
        1
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Small Category 1`] = `
<div
  className="CardSmall__Container-sc-1c3qeca-0 bJvTMD"
>
  <h2>
    Kategorie
  </h2>
  <p>
    Lorem ipsum dolor sit
  </p>
</div>
`;

exports[`Storyshots Components/Cards/Small Customer 1`] = `
<div
  className="CardSmall__Container-sc-1c3qeca-0 bJvTMD"
>
  <h2>
    Max Mustermann
  </h2>
  <p>
    Musterstraße 95
  </p>
  <p>
    48924 Musterstadt
  </p>
</div>
`;

exports[`Storyshots Components/Header Default 1`] = `
<header
  className="Header__Container-sc-17wre1r-0 bWUEZh"
>
  <h1
    className="Header__Title-sc-17wre1r-1 dMDOcO"
  >
    Home
  </h1>
</header>
`;

exports[`Storyshots Components/Navbar Bottom Default 1`] = `
<div
  className="NavbarBottom__Container-okzrgt-0 bDYGkS"
>
  <a
    aria-current="page"
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
    href="/"
    onClick={[Function]}
    style={
      Object {
        "fill": "var(--primary-third)",
      }
    }
  >
    <svg
      enableBackground="new 0 0 24 24"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <rect
          fill="none"
          height="24"
          width="24"
        />
      </g>
      <g>
        <g>
          <path
            d="M19,9.3V4h-3v2.6L12,3L2,12h3v8h6v-6h2v6h6v-8h3L19,9.3z M17,18h-2v-6H9v6H7v-7.81l5-4.5l5,4.5V18z"
          />
          <path
            d="M10,10h4c0-1.1-0.9-2-2-2S10,8.9,10,10z"
          />
        </g>
      </g>
    </svg>
  </a>
  <a
    aria-current={null}
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
    href="/product-overview"
    onClick={[Function]}
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 4h7l5 5v8.58l-1.84-1.84c1.28-1.94 1.07-4.57-.64-6.28C14.55 8.49 13.28 8 12 8c-1.28 0-2.55.49-3.53 1.46-1.95 1.95-1.95 5.11 0 7.05.97.97 2.25 1.46 3.53 1.46.96 0 1.92-.28 2.75-.83L17.6 20H6V4zm8.11 11.1c-.56.56-1.31.88-2.11.88s-1.55-.31-2.11-.88c-.56-.56-.88-1.31-.88-2.11s.31-1.55.88-2.11c.56-.57 1.31-.88 2.11-.88s1.55.31 2.11.88c.56.56.88 1.31.88 2.11s-.31 1.55-.88 2.11z"
      />
    </svg>
  </a>
  <a
    aria-current={null}
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
    href="/checkout"
    onClick={[Function]}
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </a>
  <a
    aria-current={null}
    className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
    href="/profile"
    onClick={[Function]}
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M10.25 13c0 .69-.56 1.25-1.25 1.25S7.75 13.69 7.75 13s.56-1.25 1.25-1.25 1.25.56 1.25 1.25zM15 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm7 .25c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zM10.66 4.12C12.06 6.44 14.6 8 17.5 8c.46 0 .91-.05 1.34-.12C17.44 5.56 14.9 4 12 4c-.46 0-.91.05-1.34.12zM4.42 9.47c1.71-.97 3.03-2.55 3.66-4.44C6.37 6 5.05 7.58 4.42 9.47zM20 12c0-.78-.12-1.53-.33-2.24-.7.15-1.42.24-2.17.24-3.13 0-5.92-1.44-7.76-3.69C8.69 8.87 6.6 10.88 4 11.86c.01.04 0 .09 0 .14 0 4.41 3.59 8 8 8s8-3.59 8-8z"
      />
    </svg>
  </a>
</div>
`;

exports[`Storyshots Components/Searchbar Default 1`] = `
<input
  className="Searchbar-sc-1bd71k1-0 fMbmEz"
  placeholder="Suche"
/>
`;

exports[`Storyshots Pages/Checkout Checkout 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 bWUEZh"
  >
    <h1
      className="Header__Title-sc-17wre1r-1 dMDOcO"
    >
      warenkorb
    </h1>
  </header>,
  <div
    className="NavbarBottom__Container-okzrgt-0 bDYGkS"
  >
    <a
      aria-current="page"
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "fill": "var(--primary-third)",
        }
      }
    >
      <svg
        enableBackground="new 0 0 24 24"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <rect
            fill="none"
            height="24"
            width="24"
          />
        </g>
        <g>
          <g>
            <path
              d="M19,9.3V4h-3v2.6L12,3L2,12h3v8h6v-6h2v6h6v-8h3L19,9.3z M17,18h-2v-6H9v6H7v-7.81l5-4.5l5,4.5V18z"
            />
            <path
              d="M10,10h4c0-1.1-0.9-2-2-2S10,8.9,10,10z"
            />
          </g>
        </g>
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/product-overview"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 4h7l5 5v8.58l-1.84-1.84c1.28-1.94 1.07-4.57-.64-6.28C14.55 8.49 13.28 8 12 8c-1.28 0-2.55.49-3.53 1.46-1.95 1.95-1.95 5.11 0 7.05.97.97 2.25 1.46 3.53 1.46.96 0 1.92-.28 2.75-.83L17.6 20H6V4zm8.11 11.1c-.56.56-1.31.88-2.11.88s-1.55-.31-2.11-.88c-.56-.56-.88-1.31-.88-2.11s.31-1.55.88-2.11c.56-.57 1.31-.88 2.11-.88s1.55.31 2.11.88c.56.56.88 1.31.88 2.11s-.31 1.55-.88 2.11z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/checkout"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/profile"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M10.25 13c0 .69-.56 1.25-1.25 1.25S7.75 13.69 7.75 13s.56-1.25 1.25-1.25 1.25.56 1.25 1.25zM15 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm7 .25c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zM10.66 4.12C12.06 6.44 14.6 8 17.5 8c.46 0 .91-.05 1.34-.12C17.44 5.56 14.9 4 12 4c-.46 0-.91.05-1.34.12zM4.42 9.47c1.71-.97 3.03-2.55 3.66-4.44C6.37 6 5.05 7.58 4.42 9.47zM20 12c0-.78-.12-1.53-.33-2.24-.7.15-1.42.24-2.17.24-3.13 0-5.92-1.44-7.76-3.69C8.69 8.87 6.6 10.88 4 11.86c.01.04 0 .09 0 .14 0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </a>
  </div>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;

exports[`Storyshots Pages/Confirmation Confirmation 1`] = `
Array [
  <h1>
    Order Confirmation
  </h1>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;

exports[`Storyshots Pages/Customers Customers 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 bWUEZh"
  >
    <h1
      className="Header__Title-sc-17wre1r-1 dMDOcO"
    >
      kunden
    </h1>
  </header>,
  <div
    className="NavbarBottom__Container-okzrgt-0 bDYGkS"
  >
    <a
      aria-current="page"
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "fill": "var(--primary-third)",
        }
      }
    >
      <svg
        enableBackground="new 0 0 24 24"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <rect
            fill="none"
            height="24"
            width="24"
          />
        </g>
        <g>
          <g>
            <path
              d="M19,9.3V4h-3v2.6L12,3L2,12h3v8h6v-6h2v6h6v-8h3L19,9.3z M17,18h-2v-6H9v6H7v-7.81l5-4.5l5,4.5V18z"
            />
            <path
              d="M10,10h4c0-1.1-0.9-2-2-2S10,8.9,10,10z"
            />
          </g>
        </g>
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/product-overview"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 4h7l5 5v8.58l-1.84-1.84c1.28-1.94 1.07-4.57-.64-6.28C14.55 8.49 13.28 8 12 8c-1.28 0-2.55.49-3.53 1.46-1.95 1.95-1.95 5.11 0 7.05.97.97 2.25 1.46 3.53 1.46.96 0 1.92-.28 2.75-.83L17.6 20H6V4zm8.11 11.1c-.56.56-1.31.88-2.11.88s-1.55-.31-2.11-.88c-.56-.56-.88-1.31-.88-2.11s.31-1.55.88-2.11c.56-.57 1.31-.88 2.11-.88s1.55.31 2.11.88c.56.56.88 1.31.88 2.11s-.31 1.55-.88 2.11z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/checkout"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/profile"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M10.25 13c0 .69-.56 1.25-1.25 1.25S7.75 13.69 7.75 13s.56-1.25 1.25-1.25 1.25.56 1.25 1.25zM15 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm7 .25c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zM10.66 4.12C12.06 6.44 14.6 8 17.5 8c.46 0 .91-.05 1.34-.12C17.44 5.56 14.9 4 12 4c-.46 0-.91.05-1.34.12zM4.42 9.47c1.71-.97 3.03-2.55 3.66-4.44C6.37 6 5.05 7.58 4.42 9.47zM20 12c0-.78-.12-1.53-.33-2.24-.7.15-1.42.24-2.17.24-3.13 0-5.92-1.44-7.76-3.69C8.69 8.87 6.6 10.88 4 11.86c.01.04 0 .09 0 .14 0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </a>
  </div>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;

exports[`Storyshots Pages/Home Home 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 bWUEZh"
  >
    <h1
      className="Header__Title-sc-17wre1r-1 dMDOcO"
    >
      Home
    </h1>
  </header>,
  <div
    className="NavbarBottom__Container-okzrgt-0 bDYGkS"
  >
    <a
      aria-current="page"
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "fill": "var(--primary-third)",
        }
      }
    >
      <svg
        enableBackground="new 0 0 24 24"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <rect
            fill="none"
            height="24"
            width="24"
          />
        </g>
        <g>
          <g>
            <path
              d="M19,9.3V4h-3v2.6L12,3L2,12h3v8h6v-6h2v6h6v-8h3L19,9.3z M17,18h-2v-6H9v6H7v-7.81l5-4.5l5,4.5V18z"
            />
            <path
              d="M10,10h4c0-1.1-0.9-2-2-2S10,8.9,10,10z"
            />
          </g>
        </g>
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/product-overview"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 4h7l5 5v8.58l-1.84-1.84c1.28-1.94 1.07-4.57-.64-6.28C14.55 8.49 13.28 8 12 8c-1.28 0-2.55.49-3.53 1.46-1.95 1.95-1.95 5.11 0 7.05.97.97 2.25 1.46 3.53 1.46.96 0 1.92-.28 2.75-.83L17.6 20H6V4zm8.11 11.1c-.56.56-1.31.88-2.11.88s-1.55-.31-2.11-.88c-.56-.56-.88-1.31-.88-2.11s.31-1.55.88-2.11c.56-.57 1.31-.88 2.11-.88s1.55.31 2.11.88c.56.56.88 1.31.88 2.11s-.31 1.55-.88 2.11z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/checkout"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/profile"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M10.25 13c0 .69-.56 1.25-1.25 1.25S7.75 13.69 7.75 13s.56-1.25 1.25-1.25 1.25.56 1.25 1.25zM15 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm7 .25c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zM10.66 4.12C12.06 6.44 14.6 8 17.5 8c.46 0 .91-.05 1.34-.12C17.44 5.56 14.9 4 12 4c-.46 0-.91.05-1.34.12zM4.42 9.47c1.71-.97 3.03-2.55 3.66-4.44C6.37 6 5.05 7.58 4.42 9.47zM20 12c0-.78-.12-1.53-.33-2.24-.7.15-1.42.24-2.17.24-3.13 0-5.92-1.44-7.76-3.69C8.69 8.87 6.6 10.88 4 11.86c.01.04 0 .09 0 .14 0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </a>
  </div>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;

exports[`Storyshots Pages/Loading Loading 1`] = `
Array [
  <h1>
    Loading
  </h1>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;

exports[`Storyshots Pages/Product Product 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 bWUEZh"
  >
    <h1
      className="Header__Title-sc-17wre1r-1 dMDOcO"
    >
      Angebot
    </h1>
  </header>,
  <div
    className="NavbarBottom__Container-okzrgt-0 bDYGkS"
  >
    <a
      aria-current="page"
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "fill": "var(--primary-third)",
        }
      }
    >
      <svg
        enableBackground="new 0 0 24 24"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <rect
            fill="none"
            height="24"
            width="24"
          />
        </g>
        <g>
          <g>
            <path
              d="M19,9.3V4h-3v2.6L12,3L2,12h3v8h6v-6h2v6h6v-8h3L19,9.3z M17,18h-2v-6H9v6H7v-7.81l5-4.5l5,4.5V18z"
            />
            <path
              d="M10,10h4c0-1.1-0.9-2-2-2S10,8.9,10,10z"
            />
          </g>
        </g>
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/product-overview"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 4h7l5 5v8.58l-1.84-1.84c1.28-1.94 1.07-4.57-.64-6.28C14.55 8.49 13.28 8 12 8c-1.28 0-2.55.49-3.53 1.46-1.95 1.95-1.95 5.11 0 7.05.97.97 2.25 1.46 3.53 1.46.96 0 1.92-.28 2.75-.83L17.6 20H6V4zm8.11 11.1c-.56.56-1.31.88-2.11.88s-1.55-.31-2.11-.88c-.56-.56-.88-1.31-.88-2.11s.31-1.55.88-2.11c.56-.57 1.31-.88 2.11-.88s1.55.31 2.11.88c.56.56.88 1.31.88 2.11s-.31 1.55-.88 2.11z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/checkout"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/profile"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M10.25 13c0 .69-.56 1.25-1.25 1.25S7.75 13.69 7.75 13s.56-1.25 1.25-1.25 1.25.56 1.25 1.25zM15 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm7 .25c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zM10.66 4.12C12.06 6.44 14.6 8 17.5 8c.46 0 .91-.05 1.34-.12C17.44 5.56 14.9 4 12 4c-.46 0-.91.05-1.34.12zM4.42 9.47c1.71-.97 3.03-2.55 3.66-4.44C6.37 6 5.05 7.58 4.42 9.47zM20 12c0-.78-.12-1.53-.33-2.24-.7.15-1.42.24-2.17.24-3.13 0-5.92-1.44-7.76-3.69C8.69 8.87 6.6 10.88 4 11.86c.01.04 0 .09 0 .14 0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </a>
  </div>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;

exports[`Storyshots Pages/Products Products 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 bWUEZh"
  >
    <h1
      className="Header__Title-sc-17wre1r-1 dMDOcO"
    >
      Angebote
    </h1>
  </header>,
  <div
    className="NavbarBottom__Container-okzrgt-0 bDYGkS"
  >
    <a
      aria-current="page"
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "fill": "var(--primary-third)",
        }
      }
    >
      <svg
        enableBackground="new 0 0 24 24"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <rect
            fill="none"
            height="24"
            width="24"
          />
        </g>
        <g>
          <g>
            <path
              d="M19,9.3V4h-3v2.6L12,3L2,12h3v8h6v-6h2v6h6v-8h3L19,9.3z M17,18h-2v-6H9v6H7v-7.81l5-4.5l5,4.5V18z"
            />
            <path
              d="M10,10h4c0-1.1-0.9-2-2-2S10,8.9,10,10z"
            />
          </g>
        </g>
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/product-overview"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 4h7l5 5v8.58l-1.84-1.84c1.28-1.94 1.07-4.57-.64-6.28C14.55 8.49 13.28 8 12 8c-1.28 0-2.55.49-3.53 1.46-1.95 1.95-1.95 5.11 0 7.05.97.97 2.25 1.46 3.53 1.46.96 0 1.92-.28 2.75-.83L17.6 20H6V4zm8.11 11.1c-.56.56-1.31.88-2.11.88s-1.55-.31-2.11-.88c-.56-.56-.88-1.31-.88-2.11s.31-1.55.88-2.11c.56-.57 1.31-.88 2.11-.88s1.55.31 2.11.88c.56.56.88 1.31.88 2.11s-.31 1.55-.88 2.11z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/checkout"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/profile"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M10.25 13c0 .69-.56 1.25-1.25 1.25S7.75 13.69 7.75 13s.56-1.25 1.25-1.25 1.25.56 1.25 1.25zM15 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm7 .25c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zM10.66 4.12C12.06 6.44 14.6 8 17.5 8c.46 0 .91-.05 1.34-.12C17.44 5.56 14.9 4 12 4c-.46 0-.91.05-1.34.12zM4.42 9.47c1.71-.97 3.03-2.55 3.66-4.44C6.37 6 5.05 7.58 4.42 9.47zM20 12c0-.78-.12-1.53-.33-2.24-.7.15-1.42.24-2.17.24-3.13 0-5.92-1.44-7.76-3.69C8.69 8.87 6.6 10.88 4 11.86c.01.04 0 .09 0 .14 0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </a>
  </div>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;

exports[`Storyshots Pages/Profile Profile 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 bWUEZh"
  >
    <h1
      className="Header__Title-sc-17wre1r-1 dMDOcO"
    >
      Profil
    </h1>
  </header>,
  <div
    className="NavbarBottom__Container-okzrgt-0 bDYGkS"
  >
    <a
      aria-current="page"
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk active"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "fill": "var(--primary-third)",
        }
      }
    >
      <svg
        enableBackground="new 0 0 24 24"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <rect
            fill="none"
            height="24"
            width="24"
          />
        </g>
        <g>
          <g>
            <path
              d="M19,9.3V4h-3v2.6L12,3L2,12h3v8h6v-6h2v6h6v-8h3L19,9.3z M17,18h-2v-6H9v6H7v-7.81l5-4.5l5,4.5V18z"
            />
            <path
              d="M10,10h4c0-1.1-0.9-2-2-2S10,8.9,10,10z"
            />
          </g>
        </g>
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/product-overview"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zM6 4h7l5 5v8.58l-1.84-1.84c1.28-1.94 1.07-4.57-.64-6.28C14.55 8.49 13.28 8 12 8c-1.28 0-2.55.49-3.53 1.46-1.95 1.95-1.95 5.11 0 7.05.97.97 2.25 1.46 3.53 1.46.96 0 1.92-.28 2.75-.83L17.6 20H6V4zm8.11 11.1c-.56.56-1.31.88-2.11.88s-1.55-.31-2.11-.88c-.56-.56-.88-1.31-.88-2.11s.31-1.55.88-2.11c.56-.57 1.31-.88 2.11-.88s1.55.31 2.11.88c.56.56.88 1.31.88 2.11s-.31 1.55-.88 2.11z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/checkout"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M15.55 13c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.37-.66-.11-1.48-.87-1.48H5.21l-.94-2H1v2h2l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h12v-2H7l1.1-2h7.45zM6.16 6h12.15l-2.76 5H8.53L6.16 6zM7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </a>
    <a
      aria-current={null}
      className="NavbarBottom__StyledNavLink-okzrgt-1 gBInXk"
      href="/profile"
      onClick={[Function]}
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M10.25 13c0 .69-.56 1.25-1.25 1.25S7.75 13.69 7.75 13s.56-1.25 1.25-1.25 1.25.56 1.25 1.25zM15 11.75c-.69 0-1.25.56-1.25 1.25s.56 1.25 1.25 1.25 1.25-.56 1.25-1.25-.56-1.25-1.25-1.25zm7 .25c0 5.52-4.48 10-10 10S2 17.52 2 12 6.48 2 12 2s10 4.48 10 10zM10.66 4.12C12.06 6.44 14.6 8 17.5 8c.46 0 .91-.05 1.34-.12C17.44 5.56 14.9 4 12 4c-.46 0-.91.05-1.34.12zM4.42 9.47c1.71-.97 3.03-2.55 3.66-4.44C6.37 6 5.05 7.58 4.42 9.47zM20 12c0-.78-.12-1.53-.33-2.24-.7.15-1.42.24-2.17.24-3.13 0-5.92-1.44-7.76-3.69C8.69 8.87 6.6 10.88 4 11.86c.01.04 0 .09 0 .14 0 4.41 3.59 8 8 8s8-3.59 8-8z"
        />
      </svg>
    </a>
  </div>,
  <a
    href="/storybook"
    target="_blank"
  >
    Go to Storybook
  </a>,
]
`;
